--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
     <head>
         <title>Primo</title>
         <meta charset="UTF-8" />
-        <style> body { margin: 0; } </style>
+        <link href="./js/styles.css" rel="stylesheet">
     </head>
     <body>
         <div id="root"></div>
